// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrReviewerRating Component should display Customer interaction 1`] = `
<div
  className="PrReviewerRating-collapsed-10"
>
  <div
    className="PrReviewerRating-containerListItem-2"
  >
    <WithStyles(ListItem)
      className="PrReviewerRating-nestedTextSelect-8"
    >
      <PrTextField
        fieldId="CUSTOMER_INTERACTION_CommentId"
        label="Kundeninteraktion und -veränderung"
        onChange={[Function]}
        startrows="2"
        state="DISABLED"
        value=""
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrReviewerRating-nestedNumber-6"
    >
      <PrRatingPoints
        category="CUSTOMER_INTERACTION"
        classes={
          Object {
            "center": "PrReviewerRating-center-12",
            "collapsed": "PrReviewerRating-collapsed-10",
            "containerListItem": "PrReviewerRating-containerListItem-2",
            "expanded": "PrReviewerRating-expanded-9",
            "iconComment": "PrReviewerRating-iconComment-4",
            "iconNoComment": "PrReviewerRating-iconNoComment-5",
            "nestedInfo": "PrReviewerRating-nestedInfo-7",
            "nestedListItem": "PrReviewerRating-nestedListItem-3",
            "nestedNumber": "PrReviewerRating-nestedNumber-6",
            "nestedText": "PrReviewerRating-nestedText-1",
            "nestedTextSelect": "PrReviewerRating-nestedTextSelect-8",
            "rating": "PrReviewerRating-rating-11",
          }
        }
        onChange={[Function]}
        state="DISABLED"
        value={4}
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      button={true}
      className="PrReviewerRating-nestedInfo-7"
      onClick={[Function]}
    >
      <WithStyles(Icon)
        className="PrReviewerRating-iconComment-4"
        id="CUSTOMER_INTERACTION_CommentIconId"
      >
        info
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
  </div>
  <div>
    <WithStyles(List)
      className="PrReviewerRating-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(Collapse)
        in={false}
        timeout="auto"
        unmountOnExit={true}
      >
        <WithStyles(PrSwipePositionDescription)
          category="CUSTOMER_INTERACTION"
        />
      </WithStyles(Collapse)>
    </WithStyles(List)>
  </div>
</div>
`;

exports[`PrReviewerRating Component should display ProblemAnalysis 1`] = `
<div
  className="PrReviewerRating-collapsed-10"
>
  <div
    className="PrReviewerRating-containerListItem-2"
  >
    <WithStyles(ListItem)
      className="PrReviewerRating-nestedTextSelect-8"
    >
      <PrTextField
        fieldId="PROBLEM_ANALYSIS_CommentId"
        label="Problemanalyse und -lösung"
        onChange={[Function]}
        startrows="2"
        state="DISABLED"
        value=""
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrReviewerRating-nestedNumber-6"
    >
      <PrRatingPoints
        category="PROBLEM_ANALYSIS"
        classes={
          Object {
            "center": "PrReviewerRating-center-12",
            "collapsed": "PrReviewerRating-collapsed-10",
            "containerListItem": "PrReviewerRating-containerListItem-2",
            "expanded": "PrReviewerRating-expanded-9",
            "iconComment": "PrReviewerRating-iconComment-4",
            "iconNoComment": "PrReviewerRating-iconNoComment-5",
            "nestedInfo": "PrReviewerRating-nestedInfo-7",
            "nestedListItem": "PrReviewerRating-nestedListItem-3",
            "nestedNumber": "PrReviewerRating-nestedNumber-6",
            "nestedText": "PrReviewerRating-nestedText-1",
            "nestedTextSelect": "PrReviewerRating-nestedTextSelect-8",
            "rating": "PrReviewerRating-rating-11",
          }
        }
        onChange={[Function]}
        state="DISABLED"
        value={2}
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      button={true}
      className="PrReviewerRating-nestedInfo-7"
      onClick={[Function]}
    >
      <WithStyles(Icon)
        className="PrReviewerRating-iconComment-4"
        id="PROBLEM_ANALYSIS_CommentIconId"
      >
        info
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
  </div>
  <div>
    <WithStyles(List)
      className="PrReviewerRating-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(Collapse)
        in={false}
        timeout="auto"
        unmountOnExit={true}
      >
        <WithStyles(PrSwipePositionDescription)
          category="PROBLEM_ANALYSIS"
        />
      </WithStyles(Collapse)>
    </WithStyles(List)>
  </div>
</div>
`;

exports[`PrReviewerRating Component should display Teamwork 1`] = `
<div
  className="PrReviewerRating-collapsed-10"
>
  <div
    className="PrReviewerRating-containerListItem-2"
  >
    <WithStyles(ListItem)
      className="PrReviewerRating-nestedTextSelect-8"
    >
      <PrTextField
        fieldId="TEAMWORK_CommentId"
        label="Effektives Arbeiten im Team und Teamführung"
        onChange={[Function]}
        startrows="2"
        state="DISABLED"
        value=""
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrReviewerRating-nestedNumber-6"
    >
      <PrRatingPoints
        category="TEAMWORK"
        classes={
          Object {
            "center": "PrReviewerRating-center-12",
            "collapsed": "PrReviewerRating-collapsed-10",
            "containerListItem": "PrReviewerRating-containerListItem-2",
            "expanded": "PrReviewerRating-expanded-9",
            "iconComment": "PrReviewerRating-iconComment-4",
            "iconNoComment": "PrReviewerRating-iconNoComment-5",
            "nestedInfo": "PrReviewerRating-nestedInfo-7",
            "nestedListItem": "PrReviewerRating-nestedListItem-3",
            "nestedNumber": "PrReviewerRating-nestedNumber-6",
            "nestedText": "PrReviewerRating-nestedText-1",
            "nestedTextSelect": "PrReviewerRating-nestedTextSelect-8",
            "rating": "PrReviewerRating-rating-11",
          }
        }
        onChange={[Function]}
        state="DISABLED"
        value={1}
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      button={true}
      className="PrReviewerRating-nestedInfo-7"
      onClick={[Function]}
    >
      <WithStyles(Icon)
        className="PrReviewerRating-iconComment-4"
        id="TEAMWORK_CommentIconId"
      >
        info
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
  </div>
  <div>
    <WithStyles(List)
      className="PrReviewerRating-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(Collapse)
        in={false}
        timeout="auto"
        unmountOnExit={true}
      >
        <WithStyles(PrSwipePositionDescription)
          category="TEAMWORK"
        />
      </WithStyles(Collapse)>
    </WithStyles(List)>
  </div>
</div>
`;

exports[`PrReviewerRating Component should display the ContributionToCompanyDevelopment 1`] = `
<div
  className="PrReviewerRating-collapsed-10"
>
  <div
    className="PrReviewerRating-containerListItem-2"
  >
    <WithStyles(ListItem)
      className="PrReviewerRating-nestedTextSelect-8"
    >
      <PrTextField
        fieldId="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_CommentId"
        label="Beitrag zur Unternehmensentwicklung"
        onChange={[Function]}
        startrows="2"
        state="DISABLED"
        value=""
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrReviewerRating-nestedNumber-6"
    >
      <PrRatingPoints
        category="CONTRIBUTION_TO_COMPANY_DEVELOPMENT"
        classes={
          Object {
            "center": "PrReviewerRating-center-12",
            "collapsed": "PrReviewerRating-collapsed-10",
            "containerListItem": "PrReviewerRating-containerListItem-2",
            "expanded": "PrReviewerRating-expanded-9",
            "iconComment": "PrReviewerRating-iconComment-4",
            "iconNoComment": "PrReviewerRating-iconNoComment-5",
            "nestedInfo": "PrReviewerRating-nestedInfo-7",
            "nestedListItem": "PrReviewerRating-nestedListItem-3",
            "nestedNumber": "PrReviewerRating-nestedNumber-6",
            "nestedText": "PrReviewerRating-nestedText-1",
            "nestedTextSelect": "PrReviewerRating-nestedTextSelect-8",
            "rating": "PrReviewerRating-rating-11",
          }
        }
        onChange={[Function]}
        state="DISABLED"
        value={3}
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      button={true}
      className="PrReviewerRating-nestedInfo-7"
      onClick={[Function]}
    >
      <WithStyles(Icon)
        className="PrReviewerRating-iconComment-4"
        id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_CommentIconId"
      >
        info
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
  </div>
  <div>
    <WithStyles(List)
      className="PrReviewerRating-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(Collapse)
        in={false}
        timeout="auto"
        unmountOnExit={true}
      >
        <WithStyles(PrSwipePositionDescription)
          category="CONTRIBUTION_TO_COMPANY_DEVELOPMENT"
        />
      </WithStyles(Collapse)>
    </WithStyles(List)>
  </div>
</div>
`;
